--- a/src/style.scss
+++ b/src/style.scss
@@ -540,7 +540,7 @@ https://flickity.metafizzy.co
   opacity: 1;
 }
 
-// Social Icons
+/*  Social Icons */
 
 .react-icons {
   vertical-align: top;
@@ -550,4 +550,87 @@ https://flickity.metafizzy.co
 .react-icons-social {
   vertical-align: middle;
   margin: 0.8rem;
+}
+
+/* Headroom  */
+
+.headroom {
+  transform: translateY(0%);
+  transition: transform 200ms ease-in-out;
+  background: transparent;
+  transition: all 0.3s;
+  .logo {
+    transition: all 0.3s;
+    height: 220px;
+    margin-top: 0.5rem;
+  }
+}
+
+.headroom--unfixed {
+  transform: translateY(0);
+}
+
+.headroom--unpinned,
+.headroom--scrolled {
+  transform: translateY(0%);
+  // overflow: hidden;
+  .logo {
+    left: 0.5rem !important;
+    top: 0 !important;
+    height: 55px;
+    transform: translate(0%, 0%) !important;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .headroom {
+    transform: translateY(0%);
+    transition: transform 200ms ease-in-out;
+    background: transparent;
+    transition: all 0.3s;
+    .logo {
+      transition: all 0.3s;
+      height: 200px;
+      margin-top: -0.6rem;
+    }
+  }
+
+  .headroom--unfixed {
+    transform: translateY(0);
+
+    .nav__inner {
+      li {
+        a {
+          transition: all 0.3s;
+          // margin-bottom: 0;
+          transform: translateY(0);
+        }
+      }
+    }
+  }
+
+  .headroom--unpinned,
+  .headroom--scrolled {
+    .nav__inner {
+      li {
+        a {
+          // margin-bottom: 1.5rem;
+          transform: translateY(-1rem);
+        }
+      }
+    }
+
+    transform: translateY(0%);
+    overflow: hidden;
+    // background: var(--color-black);
+    background: rgba(0 0 0 / 90%);
+    border-bottom: 1px solid grey;
+    box-shadow: 0 0 25px rgba(0 0 0 / 30%);
+    .logo {
+      transition: all 0.3s;
+      height: 100px;
+      margin-top: -0.6rem !important;
+      margin-bottom: -2.2rem !important;
+    }
+  }
 }
