--- a/src/style.scss
+++ b/src/style.scss
@@ -78,7 +78,7 @@
   --fontSize-7: 2.986rem;
 
   --color-primary: #ff6600;
-  --color-text: #f0f0f0;
+  --color-text: #e0e0e0;
   --color-text-light: #4f5969;
   --color-heading: #f0f0f0;
   --color-accent: #ff6600;
