--- a/src/style.scss
+++ b/src/style.scss
@@ -134,6 +134,7 @@ h6 {
   line-height: var(--lineHeight-tight);
   /* letter-spacing: -0.025em; */
   letter-spacing: 0.05em;
+  // word-break: break-all;
 }
 
 h2,
@@ -561,7 +562,7 @@ https://flickity.metafizzy.co
   transition: all 0.3s;
   .logo {
     transition: all 0.3s;
-    height: 220px;
+    height: 170px;
     margin-top: 0.5rem;
   }
 }
@@ -590,7 +591,7 @@ https://flickity.metafizzy.co
     transition: all 0.3s;
     .logo {
       transition: all 0.3s;
-      height: 200px;
+      height: 130px;
       margin-top: -0.6rem;
     }
   }
@@ -620,6 +621,11 @@ https://flickity.metafizzy.co
       }
     }
 
+    .logolink {
+      padding: 1rem;
+      margin-left: -2.5rem;
+    }
+
     transform: translateY(0%);
     overflow: hidden;
     // background: var(--color-black);
@@ -629,8 +635,9 @@ https://flickity.metafizzy.co
     .logo {
       transition: all 0.3s;
       height: 100px;
-      margin-top: -0.6rem !important;
-      margin-bottom: -2.2rem !important;
+      margin-top: -0.9rem !important;
+      margin-bottom: -2.1rem !important;
+      padding: 0.7rem;
     }
   }
 }
