--- a/src/style.scss
+++ b/src/style.scss
@@ -28,6 +28,7 @@
   --maxWidth-full: "100%";
   --maxWidth-wrapper: var(--maxWidth-2xl);
 
+  --spacing-auto: 10rem auto;
   --spacing-px: "1px";
   --spacing-0: 0;
   --spacing-1: 0.25rem;
