add styled components to config

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -45,6 +45,9 @@
   --spacing-24: 6rem;
   --spacing-32: 8rem;
 
+  // --fontFamily-sans: "Bebas Neue", system-ui, -apple-system, BlinkMacSystemFont,
+  //   "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+  //   "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --fontFamily-sans: "BigNoodleTitling", system-ui, -apple-system,
     BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
