add download icon, fix smartphone layout bugs, add video section, mobile menu upgrade

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -28,7 +28,11 @@
   --maxWidth-full: "100%";
   --maxWidth-wrapper: var(--maxWidth-2xl);
 
-  --spacing-auto: 10rem auto;
+  --spacing-auto: 2rem auto;
+  @media screen and (min-width: 1000px) {
+    --spacing-auto: 10rem auto;
+  }
+
   --spacing-px: "1px";
   --spacing-0: 0;
   --spacing-1: 0.25rem;
@@ -653,26 +657,54 @@ https://flickity.metafizzy.co
   margin-top: 0 !important;
 }
 .spacingtop-small {
-  margin-top: 7rem !important;
+  margin-top: 3rem !important;
 }
 .spacingtop-medium {
-  margin-top: 14rem !important;
+  margin-top: 6rem !important;
 }
 .spacingtop-big {
-  margin-top: 22rem !important;
+  margin-top: 10rem !important;
 }
 
 .spacingbottom-nospace {
   margin-top: 0 !important;
 }
 .spacingbottom-small {
-  margin-bottom: 7rem !important;
+  margin-bottom: 3rem !important;
 }
 .spacingbottom-medium {
-  margin-bottom: 14rem !important;
+  margin-bottom: 6rem !important;
 }
 .spacingbottom-big {
-  margin-bottom: 22rem !important;
+  margin-bottom: 10rem !important;
+}
+
+@media screen and (min-width: 1000px) {
+  .spacingtop-nospace {
+    margin-top: 0 !important;
+  }
+  .spacingtop-small {
+    margin-top: 7rem !important;
+  }
+  .spacingtop-medium {
+    margin-top: 14rem !important;
+  }
+  .spacingtop-big {
+    margin-top: 22rem !important;
+  }
+
+  .spacingbottom-nospace {
+    margin-top: 0 !important;
+  }
+  .spacingbottom-small {
+    margin-bottom: 7rem !important;
+  }
+  .spacingbottom-medium {
+    margin-bottom: 14rem !important;
+  }
+  .spacingbottom-big {
+    margin-bottom: 22rem !important;
+  }
 }
 
 .orangebackground {
