--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -164,18 +164,30 @@ h1 {
 
 h2 {
   font-size: var(--fontSize-5);
+  @media screen and (max-width: 1000px) {
+    font-size: var(--fontSize-4);
+  }
 }
 
 h3 {
   font-size: var(--fontSize-4);
+  @media screen and (max-width: 1000px) {
+    font-size: var(--fontSize-3);
+  }
 }
 
 h4 {
   font-size: var(--fontSize-3);
+  @media screen and (max-width: 1000px) {
+    font-size: var(--fontSize-2);
+  }
 }
 
 h5 {
   font-size: var(--fontSize-2);
+  @media screen and (max-width: 1000px) {
+    font-size: var(--fontSize-1);
+  }
 }
 
 h6 {
@@ -404,6 +416,13 @@ a:focus {
   color: white;
   opacity: 1;
   box-shadow: 0 0 15px rgba(0 0 0 / 30%);
+}
+
+@media screen and (max-width: 1000px) {
+  .button {
+    font-size: 1rem;
+    padding: 0.4rem 0.7rem;
+  }
 }
 
 /*! Flickity v2.2.1
