mobile quote fix

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -680,10 +680,10 @@ https://flickity.metafizzy.co
   margin-top: 0 !important;
 }
 .spacingtop-small {
-  margin-top: 0 !important;
+  margin-top: 1rem !important;
 }
 .spacingtop-medium {
-  margin-top: 0 !important;
+  margin-top: 2rem !important;
 }
 .spacingtop-big {
   margin-top: 10rem !important;
@@ -693,10 +693,10 @@ https://flickity.metafizzy.co
   margin-top: 0 !important;
 }
 .spacingbottom-small {
-  margin-bottom: 0 !important;
+  margin-bottom: 1rem !important;
 }
 .spacingbottom-medium {
-  margin-bottom: 0 !important;
+  margin-bottom: 2rem !important;
 }
 .spacingbottom-big {
   margin-bottom: 10rem !important;
