--- a/static/fonts/big_noodle_titlling.css
+++ b/static/fonts/big_noodle_titlling.css
@@ -3,4 +3,6 @@
   src: url("./big_noodle_titling.woff2") format("woff2"),
     url("./big_noodle_titling.woff") format("woff"),
     url("./big_noodle_titling.ttf") format("truetype");
+  font-style: normal;
+  font-display: swap;
 }
