--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -808,3 +808,14 @@ ol {
     display: list-item;
   }
 }
+
+
+// DISPLAY CONSENT
+
+.display-block {
+  display: block !important;
+}
+
+.display-none {
+  display: none !important;
+}
