--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -89,12 +89,14 @@
   --fontSize-6: 2.488rem;
   --fontSize-7: 2.986rem;
 
+  // --color-primary: #FF7600;
   --color-primary: #ff6600;
-  --color-text: #e0e0e0;
+  --color-text: #f1f1f1;
   --color-text-light: #4f5969;
   --color-heading: #f0f0f0;
   --color-black: #0a0a0a;
   // --color-black: #070707;
+  // --color-darkgreen: #383B2A;
   --color-darkgreen: #50533c;
 }
 
